# ai-slop-extension

./: .gcloudignore  .gitignore  DATABASE_SCHEMA.md  LICENSE  PRIVACY_POLICY.md  README.md  architecture.md  chrome-web-store-desc.txt  metrics-collection-plan.md  package-lock.json  test-post-id-flow.md  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ENDPOINTS.md  README.md  alembic.ini  clear_bucket.py  cloudbuild.yaml  detect_video.py  main.py  migrate.sh  models.py  package-lock.json  package.json  pyproject.toml  reset-schema.sh  ruff.toml  test_clipbased.py  test_extension.py  test_gcs_integration.py  test_slowfast.py  test_ytdlp_integration.py
backend/api/v1/: router.py
backend/app/: __init__.py
backend/clipbased_detection/: README.md  __init__.py  config.py  detection.py  utils.py
backend/clipbased_detection/networks/: openclipnet.py
backend/clipbased_detection/utils/: processing.py
backend/core/: config.py  dependencies.py  errors.py  media_registry.py  middleware.py
backend/db/: async_session.py  models.py  pool.py  session.py
backend/db/migrations/: env.py
backend/db_backups/: latest
backend/db_backups/20250828_083932/: metadata.json  post.sql  post_media.sql
backend/ml/clipbased/: __init__.py
backend/ml/slowfast/: __init__.py
backend/prisma/: schema.prisma
backend/schemas/: analytics.py  chat.py  content_detection.py  image_detection.py  responses.py  text_detection.py  video_detection.py
backend/scripts/: backup-tables.sh  clear-bucket.sh  kill.sh  migrate.sh  reset-schema.sh  reset.sh  restore-tables.sh  start.sh
backend/services/: analytics_service.py  chat_service.py  content_detection_service.py  content_detection_service_v2.py  detection_service.py  file_upload_service.py  gcs_storage_service.py  gemini_on_demand_service.py  gemini_recovery_service.py  gemini_uploader.py  image_detection_service.py  media_analyzer.py  media_pipeline.py  media_repo.py  monitoring_service.py  post_media_service.py  text_detection_service.py  unified_media_service.py  video_detection_service.py  video_processor.py  ytdlp_video_service.py
backend/services/detections/: interfaces.py  registry.py
backend/slowfast_detection/: README.md  model_downloader.py
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/tests/: test_analytics.py  test_api.py  test_clipbased.py  test_slowfast.py
backend/utils/: content_deduplication.py  file_utils.py  logging.py  media_id_extractor.py
docs/: README.md  (+7 more)
(+131 files in other folders)
